[package]
name = "threedengine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1


[dependencies]
approx = "0.5.1"
ndarray = { version = "0.15.6", features = ["approx"] }
minifb = "0.23.0"
rand = "0.8.4"
noto-sans-mono-bitmap = { version = "0.2.0", features = ["size_20"] }

[dependencies.float_eq]
version = "1"
features = ["derive"]
